fix: dark mode snaps on desktop v2

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -13,7 +13,7 @@ html, body {
 html,
 body,
 main {
-  transition: background-color 0.35s ease, color 0.35s ease;
+  transition: background-color 0.4s ease, color 0.4s ease;
 }
 body {
     margin: 0px;
